--- a/requirements.txt
+++ b/requirements.txt
@@ -1,34 +1,15 @@
-aiohappyeyeballs==2.4.0
-aiohttp==3.10.5
-aiosignal==1.3.1
-attrs==24.2.0
 blinker==1.9.0
-click==8.2.1
+click==8.1.7
 colorama==0.4.6
-discord.py==2.4.0
-Flask==3.0.3
-Flask-Login==0.6.3
+Flask==3.1.2
 Flask-SQLAlchemy==3.1.1
-frozenlist==1.4.1
-greenlet==3.2.3
-idna==3.10
-iniconfig==2.0.0
+greenlet==3.2.4
 itsdangerous==2.2.0
-Jinja2==3.1.6
+Jinja2==3.1.4
 MarkupSafe==3.0.2
-multidict==6.1.0
-numpy==2.1.3
-packaging==24.2
-pillow==11.2.1
-pluggy==1.5.0
-pygame==2.6.0
-pytest==8.3.4
 python-dateutil==2.9.0.post0
+python-dotenv==1.0.1
 six==1.17.0
-SQLAlchemy==2.0.41
-sqlparse==0.5.1
-typing_extensions==4.14.1
-tzdata==2024.1
+SQLAlchemy==2.0.44
+typing_extensions==4.15.0
 Werkzeug==3.1.3
-windows-curses==2.3.3
-yarl==1.11.1
