--- a/Sistema_de_Reservas/env/pyvenv.cfg
+++ b/Sistema_de_Reservas/env/pyvenv.cfg
@@ -1,5 +1,5 @@
-home = C:\Users\Samara Fernanda\AppData\Local\Microsoft\WindowsApps\PythonSoftwareFoundation.Python.3.13_qbz5n2kfra8p0
+home = C:\Users\aurea\AppData\Local\Programs\Python\Python313
 include-system-site-packages = false
 version = 3.13.9
-executable = C:\Users\Samara Fernanda\AppData\Local\Microsoft\WindowsApps\PythonSoftwareFoundation.Python.3.13_qbz5n2kfra8p0\python.exe
-command = C:\Users\Samara Fernanda\AppData\Local\Microsoft\WindowsApps\PythonSoftwareFoundation.Python.3.13_qbz5n2kfra8p0\python.exe -m venv C:\Users\Samara Fernanda\Documents\romerito\Reservas-Onlines\Sistema_de_Reservas\env
+executable = C:\Users\aurea\AppData\Local\Programs\Python\Python313\python.exe
+command = C:\Users\aurea\AppData\Local\Programs\Python\Python313\python.exe -m venv C:\Users\aurea\OneDrive\Documentos\GitHub\Reservas-Onlines\Cópia de Segurança\Sistema_de_Reservas\env
